AC_INIT(src/apple2.h)
AM_INIT_AUTOMAKE(apple2-emul, 0.7.4)

AC_PROG_CC

AC_CHECK_HEADER(linux/joystick.h, [
   AC_DEFINE(PC_JOYSTICK)
   JOYSTICK_O=joystick.o])
   
AC_ARG_ENABLE(debugger, [  --enable-debugger       Single-step, &c. support],[
   AC_DEFINE(DEBUGGER)
   DEBUGGER_O="debug.o debugger.o opcodes.o"])

AC_FUNC_MMAP
A2_ASM_UNDERSCORES

AC_PATH_XTRA

if test -z $no_x 
then
    PROGS="xapple2 xapple2-80col"
fi

AC_CHECK_LIB(vga,vga_init,PROGS="$PROGS apple2")

# unconditionally enabling //e support. No reason to do without it, IMO
AC_DEFINE(APPLE_IIE)
AC_DEFINE(MAX_APPLE_DELAY,1000)

AC_SUBST(JOYSTICK_O)
AC_SUBST(DEBUGGER_O)
AC_SUBST(PROGS)

AC_OUTPUT([Makefile src/Makefile disks/Makefile])

